--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
      <h2 class="loud">
       My Portfolio</h2>
      <p>
-      Here is a list of my projects</p>
+      here is a list of my projects</p>
      <a class="btn btn-default btn-lg" href="/">Codecademy</a> <a class="btn btn-default btn-lg" href="/">Github</a></div>
    </div>
   </div>
