--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
    <div class="container">
     <div class="col-lg-8 col-lg-offset-2">
      <h2>
-      About me</h2>
+      About mE</h2>
      <p>
       I'm a student from the southside of Chicago making a website.</p>
     </div>
